sidebar drawer tweaks

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
   <div class="drawer drawer-left js-drawer" data-drawer="top-nav" tabindex="0">
     <nav class="drawer-nav" role="navigation">
       <aside class="side-nav">
-        <h2 class="side-nav-title">VTrans Rail</h2>
+        <h2 class="side-nav-title vtrans-logo"></h2>
+        <p class="side-nav-title">
+          Additional GIS Resources
+        </p>
         <a href="http://vtrans.maps.arcgis.com" class="side-nav-link" target="_blank">ArcGIS Online</a>
         <a href="http://data.vtrans.opendata.arcgis.com/" class="side-nav-link" target="_blank">Open Data Portal</a>
         <a href="http://vtransmap01.aot.state.vt.us/" class="side-nav-link" target="_blank">VTransMap</a>
@@ -54,7 +57,7 @@
     <div class="grid-container">
       <div class="column-24">
         <div class="tablet-hide">
-          <a href="" class="top-nav-title">VTrans Rail</a>
+          <a href="" class="top-nav-title vtrans-logo"></a>
           <nav class="top-nav-list" role="navigation">
             <a href="http://vtrans.maps.arcgis.com" class="top-nav-link" target="_blank">ArcGIS Online</a>
             <a href="http://data.vtrans.opendata.arcgis.com/" class="top-nav-link" target="_blank">Open Data Portal</a>
@@ -64,7 +67,7 @@
         </div>
 
         <div class="tablet-show">
-          <a href="/" class="icon-ui-menu top-nav-title js-drawer-toggle" data-drawer="top-nav">VTrans Rail</a>
+          <a href="/" class="icon-ui-menu top-nav-title js-drawer-toggle" id="top-nav-title" data-drawer="top-nav">VTrans Rail</a>
         </div>
       </div>
     </div>
@@ -155,7 +158,7 @@
           <h3 class="">VTransparency</h3>
           <div class="panel-dark-blue  clearfix">
             <div class="column-7 left gutter-right-1 gutter-left-1 leader-1 trailer-1">
-              <a href="http://vtransparency.vermont.gov" class="" target="_blank"><img src="img/vtransparency.jpg" class="" alt=""></a>
+              <a href="http://vtransparency.vermont.gov" class="" target="_blank"><img src="img/vtransparency.jpg" class="" id="vtransparency" alt=""></a>
             </div>
             <div class="column-8">
               <h6 class="padding-leader-1 trailer-half font-size--1">VTrans Open Map Portal</h6>
