footer img adjust

--- a/index.html
+++ b/index.html
@@ -157,14 +157,12 @@
         <div class="column-16">
           <h3 class="">VTransparency</h3>
           <div class="panel-dark-blue  clearfix">
-            <div class="column-7 left gutter-right-1 gutter-left-1 leader-1 trailer-1">
+            <div class="left gutter-right-1 gutter-left-1 leader-1 trailer-1">
               <a href="http://vtransparency.vermont.gov" class="" target="_blank"><img src="img/vtransparency.jpg" class="" id="vtransparency" alt=""></a>
             </div>
-            <div class="column-8">
               <h6 class="padding-leader-1 trailer-half font-size--1">VTrans Open Map Portal</h6>
               <p class="font-size--2 trailer-half">Answers to our most commonnly asked questions - with maps!</p>
               <a href="http://vtransparency.vermont.gov" class="link-white btn-arrow font-size--2 leader-half" target="_blank">Visit the portal</a>
-            </div>
           </div>
         </div>
       </div>
