--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           Additional GIS Resources
         </p>
         <a href="http://vtrans.maps.arcgis.com" class="side-nav-link" target="_blank">ArcGIS Online</a>
+        <a href="http://vtransparency.vermont.gov/" class="side-nav-link" target="_blank">VTransparency</a>
         <a href="http://data.vtrans.opendata.arcgis.com/" class="side-nav-link" target="_blank">Open Data Portal</a>
         <a href="http://vtransmap01.aot.state.vt.us/" class="side-nav-link" target="_blank">VTransMap</a>
         <a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="side-nav-link" target="_blank">VT 511</a>
@@ -60,6 +61,7 @@
           <a href="" class="top-nav-title vtrans-logo"></a>
           <nav class="top-nav-list" role="navigation">
             <a href="http://vtrans.maps.arcgis.com" class="top-nav-link" target="_blank">ArcGIS Online</a>
+            <a href="http://vtransparency.vermont.gov/" class="top-nav-link" target="_blank">VTransparency</a>
             <a href="http://data.vtrans.opendata.arcgis.com/" class="top-nav-link" target="_blank">Open Data Portal</a>
             <a href="http://vtransmap01.aot.state.vt.us/" class="top-nav-link" target="_blank">VTransMap</a>
             <a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="top-nav-link" target="_blank">VT 511</a>
@@ -149,6 +151,7 @@
           <h3 class="">VTrans GIS Platform</h3>
           <ul class="font-size--1">
             <li><a href="http://vtrans.maps.arcgis.com" class="link-white" target="_blank">ArcGIS Online</a></li>
+            <li><a href="http://vtransparency.vermont.gov/" class="link-white" target="_blank">VTransparency</a></li>
             <li><a href="http://data.vtrans.opendata.arcgis.com/" class="link-white" target="_blank">Open Data Portal</a></li>
             <li><a href="http://vtransmap01.aot.state.vt.us/" class="link-white" target="_blank">VTransMap</a></li>
             <li><a href="http://vtransmaps.vermont.gov/VTrans511/511live.htm" class="link-white" target="_blank">VT 511</a></li>
