include new thumbnails

--- a/index.html
+++ b/index.html
@@ -125,17 +125,24 @@
 
     </div>
 
-    <!-- <div class="panel panel-light-blue">
+    <div class="panel panel-light-blue">
       <div class="grid-container leader-1">
         <div class="column-8">
-          <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/geonet.jpg" alt="">
-          <h4 class=""><a href="#">What is GeoNet?</a></h4>
-          <p>A social and business site for geogeeks! <a href="#">Join the conversation</a></p>
+          <a href="http://vtrans.maps.arcgis.com/apps/webappviewer/index.html?id=75bf072100f74ce58bddbc064038df3e" target="_blank"><img src="img/val-sheet.jpg" alt=""></a>
+          <h4 class=""><a href="http://vtrans.maps.arcgis.com/apps/webappviewer/index.html?id=75bf072100f74ce58bddbc064038df3e" target="_blank">Valuation Sheet Reference</a></h4>
+          <p>
+            These historic valuation sheets roughly depict the location of the ROW
+            at the time they were prepared (1915-1920).
+            <strong>Please note important disclaimers.</strong>
+          </p>
         </div>
         <div class="column-8">
-          <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/geoplanner-2.jpg" alt="">
-          <h4 class=""><a href="#">Your App for Geodesign</a></h4>
-          <p>GeoPlanner for ArcGIS simplifies your planning workflow. <a href="#">See how</a></p>
+          <a href="http://www.arcgis.com/apps/Viewer/index.html?webmap=9abd126d1aaa4f47b0e640c9eafe5df2" target="_blank"><img src="img/clearance.jpg" alt=""></a>
+          <h4 class=""><a href="http://www.arcgis.com/apps/Viewer/index.html?webmap=9abd126d1aaa4f47b0e640c9eafe5df2" target="_blank">Clearance Restrictions</a></h4>
+          <p>
+            This map depicts all detected obstructions within 24' horizontally
+            and vertically from the railroad center line from a 1997 inspection.
+          </p>
         </div>
         <div class="column-8">
           <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/opendata.jpg" alt="">
@@ -144,7 +151,7 @@
         </div>
       </div>
     </div>
--->
+
     <div class="panel panel-blue text-white link-white">
       <div class="grid-container trailer-1">
         <div class="column-8">
