setup bridge inspection

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
         <div class="column-8">
           <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/opendata.jpg" alt="">
-          <h4 class=""><a href="#">Turn on Open Data</a></h4>
+          <h4 class=""><a href="http://www.arcgis.com/apps/PanelsLegend/index.html?webmap=d7183cb147c340888f241f5830f1841f" target="_blank">Bridge Inspection Report</a></h4>
           <p>Included as part of ArcGIS Online. <a href="#">Get started today</a></p>
         </div>
       </div>
