--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </p>
         </div>
         <div class="column-8">
-          <img src="http://www.esri.com/~/media/Images/Content/homepage/announcements/opendata.jpg" alt="">
+          <img src="img\br-insp.jpg" alt="">
           <h4 class=""><a href="http://www.arcgis.com/apps/PanelsLegend/index.html?webmap=d7183cb147c340888f241f5830f1841f" target="_blank">Bridge Inspection Report</a></h4>
           <p>Included as part of ArcGIS Online. <a href="#">Get started today</a></p>
         </div>
