update bridge inspection link

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
           </p>
         </div>
         <div class="column-8">
-          <img src="img\br-insp.jpg" alt="">
-          <h4 class=""><a href="http://www.arcgis.com/apps/PanelsLegend/index.html?webmap=d7183cb147c340888f241f5830f1841f" target="_blank">Bridge Inspection Report</a></h4>
-          <p>Included as part of ArcGIS Online. <a href="#">Get started today</a></p>
+          <a href="http://vtrans.maps.arcgis.com/apps/Viewer/index.html?appid=4fcedf48d3a04c50919644126348a6cb" target="_blank"><img src="img\br-insp.jpg" alt=""></a>
+          <h4 class=""><a href="http://vtrans.maps.arcgis.com/apps/Viewer/index.html?appid=4fcedf48d3a04c50919644126348a6cb" target="_blank">Bridge Inspection Report</a></h4>
+          <p>This map includes basic bridge inspection results from the current and previous inspection years.</p>
         </div>
       </div>
     </div>
