--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
   <!-- stylesheets -->
 
-  <link rel="stylesheet" href="dist/css/calcite-web.min.css">
+  <link rel="stylesheet" type="text/css" href="dist/css/calcite-web.min.css">
 
   <!-- Style overrides -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
   <!--[if lt IE 9]>
       <script src="../../assets/js/libs/selectivizr-min.js"></script>
       <script src="../../assets/js/libs/html5shiv.js"></script>
     <![endif]-->
 
-  <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+  <!-- <script type="text/javascript" src="http://localhost:35729/livereload.js"></script> -->
 
 </head>
 
