switch to no-fonts and fix SVG IE scaling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- stylesheets -->
 
-  <link rel="stylesheet" type="text/css" href="dist/css/calcite-web.min.css">
+  <link rel="stylesheet" type="text/css" href="dist/css/calcite-web-no-fonts.min.css">
 
   <!-- Style overrides -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
